# KIR_graph

./: .gitignore  Dockerfile  KIR_gene_haplotypes.csv  PING_run.R  README.md  README_NCHC.md  case_repeat.py  gatkir.py  gatkir_call.py  graph_by_hisat.py  graph_typping.py  graphviz.dockerfile  hg38_chr19  hg38_chrun  hprc.csv  isolate_task.py  kg_build_index.py  kg_build_msa.py  kg_cn_eval.py  kg_create_data.py  kg_create_fake_intron.py  kg_create_novel.py  kg_eval.py  kg_extract_exon_seq.py  kg_from_kelvin.py  kg_index_eval.py  kg_linnil1.py  kg_main.py  kg_mapping.py  kg_mapping_eval.py  kg_msa_leftalign.py  kg_ping_threshold_plot.py  kg_prev_mapping_eval.py  kg_real.py  kg_typing_novel.py  kg_typing_phase.py  kg_typping.py  kg_typping_linnil1.py  kg_utils.py  kg_wgs.py  (+32 more)
example/: cohort.csv  result.allele.tsv  result.cn.tsv  test00.assigned.cn.tsv
graphkir/: README.md  cn_model.py  example.cn.tsv  example.csv  external_tools.py  gk_build_index.py  gk_build_msa.py  gk_cn.py  gk_cn_model.py  gk_fill_intron.py  gk_hisat2.py  gk_hisat2em.py  gk_kir_typing.py  gk_main.py  gk_msa_leftalign.py  gk_multi_allele_typing.py  gk_pileup.py  gk_plot.py  gk_utils.py  hisat2.py  kir_cn.py  kir_msa.py  kir_typing.py  main.py  mkdocs.yml  msa2hisat.py  msa_cds_intron.py  msa_leftalign.py  mypy.ini  novel_discover.py  pileup.py  plot.py  requirements.txt  samtools_utils.py  typing_em.py  typing_mulit_allele.py  utils.py  wgs.py
kir/: graphkir.py  kir_pipe.py  kpi.py  main.py  ping.dockerfile  ping.py  ping.run.R  ping.run_20220527.R  ping.run_wgs.R  sakauekir.py  sakauekir_call.py  sakauekir_cn.py  t1k.dockerfile  t1k.py
research/: hprc.tweek.threshold.csv  hprc.tweek.wgs.threshold.csv  hs38.decoy  kg_3dx1_test.py  kg_create_data.py  kg_create_exonseq_only.py  kg_create_fake_intron.py  kg_create_novel.py  kg_create_version_diff_allele.py  kg_dev_typing_phase.py  kg_eval.py  kg_eval_cn.py  kg_eval_hprc_alldigit.py  kg_eval_hprc_remove_novel.py  kg_eval_ignore_novel.py  kg_eval_index.py  kg_eval_mapping.py  kg_eval_multi.py  kg_eval_wgs_mapping.py  kg_from_kelvin.py  kg_main.py  kg_mapping.py  kg_real.py  kg_typing_novel.py  kg_utils.py  kg_wgs.py  other_kir.py  taiwania.28.template  taiwania.48.template  test_speed.graphkir.par.sh  test_speed.graphkir.sh  test_speed.ping.sh  vg.py
research/groundtruth/: hprc_summary_v1_2_e.tsv
